Minor tweaks to EMI integration